--- a/views/assistant.html.twig
+++ b/views/assistant.html.twig
@@ -164,33 +164,84 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="insideslide_input">
+
+                                    <div class="form-group formselectage">
+                                        <select class="form-control" id="formselectage">
+
+                                            <option name="40">40 ans </option>
+                                            <option name="41">41 ans </option>
+                                            <option name="42">42 ans </option>
+                                            <option name="43">43 ans </option>
+                                            <option name="44">44 ans </option>
+                                            <option name="45">45 ans </option>
+                                            <option name="46">46 ans </option>
+                                            <option name="47">47 ans </option>
+                                            <option name="48">48 ans </option>
+                                            <option name="49">49 ans </option>
+                                            <option name="50">50 ans </option>
+                                            <option name="51">51 ans </option>
+                                            <option name="52">52 ans </option>
+                                            <option name="53">53 ans </option>
+                                            <option name="54">54 ans </option>
+                                            <option name="55">55 ans </option>
+                                            <option name="56">56 ans </option>
+                                            <option name="57">57 ans </option>
+                                            <option name="58">58 ans </option>
+                                            <option name="59">59 ans </option>
+                                            <option name="60">60 ans </option>
+                                            <option name="61">61 ans </option>
+                                            <option name="62">62 ans </option>
+                                            <option name="63">63 ans </option>
+                                            <option name="64">64 ans </option>
+                                            <option name="65">65 ans </option>
+                                            <option name="66">66 ans </option>
+                                            <option name="67">67 ans </option>
+                                            <option name="68">68 ans </option>
+                                            <option name="69">69 ans </option>
+                                            <option name="70">70 ans </option>
+                                            <option name="71">71 ans </option>
+                                            <option name="72">72 ans </option>
+                                            <option name="73">73 ans </option>
+                                            <option name="74">74 ans </option>
+                                            <option name="75">75 ans </option>
+                                            <option name="76">76 ans </option>
+                                            <option name="77">77 ans </option>
+                                            <option name="78">78 ans </option>
+                                            <option name="79">79 ans </option>
+                                            <option name="80">80 ans </option>
+                                            <option name="81">81 ans </option>
+                                            <option name="82">82 ans </option>
+                                            <option name="83">83 ans </option>
+                                            <option name="84">84 ans </option>
+                                            <option name="85">85 ans </option>
+                                            <option name="86">86 ans </option>
+                                            <option name="87">87 ans </option>
+                                            <option name="88">88 ans </option>
+                                            <option name="89">89 ans </option>
+                                            <option name="90">90 ans </option>
+                                            <option name="91">91 ans </option>
+                                            <option name="92">92 ans </option>
+                                            <option name="93">93 ans </option>
+                                            <option name="94">94 ans </option>
+                                            <option name="95">95 ans </option>
+                                            <option name="96">96 ans </option>
+                                            <option name="97">97 ans </option>
+                                            <option name="98">98 ans </option>
+                                            <option name="99">99 ans </option>
+                                            <option name="100">100 ans </option>
+
+                                        </select>
+                                    </div>
+
+
+                                    <div class="assistantage" style="margin-top:25px">
+                                        <a id="buttonagevalid" class="btn btn-default btnpelican" href="#find/q3">valider <span id="buttonage">40 ans</span></a>
+
+                                    </div>
+
+                                    <!--
                                     <div id="ticker">
                                         <div id="rotator">
-                                            <span>15 ans </span>
-                                            <span>16 ans </span>
-                                            <span>17 ans </span>
-                                            <span>18 ans </span>
-                                            <span>19 ans </span>
-                                            <span>20 ans </span>
-                                            <span>21 ans </span>
-                                            <span>22 ans </span>
-                                            <span>23 ans </span>
-                                            <span>24 ans </span>
-                                            <span>25 ans </span>
-                                            <span>26 ans </span>
-                                            <span>27 ans </span>
-                                            <span>28 ans </span>
-                                            <span>29 ans </span>
-                                            <span>30 ans </span>
-                                            <span>31 ans </span>
-                                            <span>32 ans </span>
-                                            <span>33 ans </span>
-                                            <span>34 ans </span>
-                                            <span>35 ans </span>
-                                            <span>36 ans </span>
-                                            <span>37 ans </span>
-                                            <span>38 ans </span>
-                                            <span>39 ans </span>
                                             <span>40 ans </span>
                                             <span>41 ans </span>
                                             <span>42 ans </span>
@@ -264,7 +315,9 @@
                                             <span>110 ans </span>
                                         </div>
                                     </div>
-                                    <input class="optionAGE" type="hidden" name="optionAGE" id="optionAGE" value="18">
+                                    -->
+
+                                    <input class="optionAGE" type="hidden" name="optionAGE" id="optionAGE" value="43">
                                 </div>
                             </div>
                         </div>
@@ -442,7 +495,7 @@
                         <div class="insideslide_inside">
                             <div class="col-md-4">
                                 <div class="insideslide_title">
-                                    <h4 class=""> Définissez votre budget... </h4>
+                                    <h4 class=""> Définissez votre budget mensuel sur place </h4>
                                 </div>
                             </div>
                             <div class="col-md-8">
