--- a/views/city.html.twig
+++ b/views/city.html.twig
@@ -56,9 +56,11 @@
                         <div class="col-md-8">
                             <div class="customvalign">
                                 <h2 class="centertext animated fadeInDown"> Grâce à vos critères, le Pélican a trouvé la destination qui vous correspond le plus: </h2>
-                                <h1 class="centertext animated fadeInDown"> <strong> {{ random_name }} !</strong> </h1>
+                                <h1 class="centertext animated fadeInDown"> <strong> {{ random_name }}!</strong> </h1>
 
+                                <p style="color:white; margin-bottom:25px;" class="centertext animated fadeInDown">Voir le comparateur</p>
                                 <p><i id="cityNext" class="fa animated fadeInDown fa-arrow-circle-down" aria-hidden="true"></i></p>
+
                             </div>
                         </div>
 
