--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -37,8 +37,8 @@
                                 <p>Il serait peut être temps de</p>
                                 <p><strong>changer votre routine...</strong></p>
                             </div>
-                            <div class="animated fadeInDown section_cta">
-                                <a id="manifesto_video" class="" href="#explainer" data-toggle="modal" data-target="#modal_video">Voir la vidéo <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                            <div class="animated fadeInDown manifesto_jumbo_cta">
+                                <a id="manifesto_video" class="btn btn-default btnpelican" href="#explainer" data-toggle="modal" data-target="#modal_video">Voir la vidéo <i class="fa fa-angle-right" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                                         <img src="{{ asset('/img/manifestocoeurblue.png') }}" alt=""/>
                                     </div>
                                     <div class="manifesto_explainer_title section_sub_title">
-                                        Choisissez vos critères
+                                        Choisissez
                                     </div>
                                     <div class="manifesto_explainer_content section_txt">
                                         Le Pélican se charge
@@ -107,7 +107,7 @@
                                         <img src="{{ asset('/img/manifestopinblue.png') }}" alt=""/>
                                     </div>
                                     <div class="manifesto_explainer_title section_sub_title">
-                                        Préparez votre départ
+                                        Préparez
                                     </div>
                                     <div class="manifesto_explainer_content section_txt">
                                         Le Pélican vous sélectionne
@@ -124,7 +124,7 @@
                                         <img src="{{ asset('/img/manifestoinfoblue.png') }}" alt=""/>
                                     </div>
                                     <div class="manifesto_explainer_title section_sub_title">
-                                        Partez serein
+                                        Partez
                                     </div>
                                     <div class="manifesto_explainer_content section_txt">
                                         Le Pélican vous aide à trouver
@@ -140,7 +140,7 @@
                                         <img src="{{ asset('/img/manifestomailblue.png') }}" alt=""/>
                                     </div>
                                     <div class="manifesto_explainer_title section_sub_title">
-                                        Vivez enfin
+                                        Vivez
                                     </div>
                                     <div class="manifesto_explainer_content section_txt">
                                         Même après votre départ,
