--- a/views/results.html.twig
+++ b/views/results.html.twig
@@ -55,7 +55,7 @@
 
                             <div class="col-md-8">
                                 <div class="customvalign">
-                                    <h2 class="centertext animated fadeInDown"> <strong> Le Pélican a <span>1</span> ville pour vous !</strong> </h2>
+                                    <h2 class="centertext animated fadeInDown"> <strong> Le Pélican a une ville pour vous !</strong> </h2>
                                     <h2 class="centertext animated fadeInDown">Entrez votre adresse email pour la découvrir</h2>
 
                                     <form class="animated fadeInDown" action="{{ path('city') }}" method="POST" id="formulaireResults">
