--- a/views/tpl/footerreco.html.twig
+++ b/views/tpl/footerreco.html.twig
@@ -7,9 +7,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
 <!-- Fullpage JS -->
 <script src="{{ asset('/lib/fullpage/jquery.fullPage.js') }}"></script>
-
-<!-- assistant js -->
-<script src="{{ asset('/js/assistant.js') }}"></script>
+<!-- reco JS -->
+<script src="{{ asset('/js/recommendation.js') }}"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
