--- a/views/tpl/footerrecoresults.html.twig
+++ b/views/tpl/footerrecoresults.html.twig
@@ -7,9 +7,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
 <!-- Fullpage JS -->
 <script src="{{ asset('/lib/fullpage/jquery.fullPage.js') }}"></script>
+<!-- D3js -->
 
-<!-- assistant js -->
-<script src="{{ asset('/js/assistant.js') }}"></script>
+<!-- recoresults js -->
+<script src="{{ asset('/js/recoresults.js') }}"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
